DEPENDENCIES [package.json]
all the dependencies or third party packages are stored within this  JSON file

--- a/Mid_assignment_[16-32332-2]/OnLine_CompuTer_Shop/package.json
+++ b/Mid_assignment_[16-32332-2]/OnLine_CompuTer_Shop/package.json
@@ -25,7 +25,8 @@
     "type": "git",
     "url": "git+https://github.com/emon-iqbal/LEARNiNG-nodejs-expressjs-framework-fall-2020-2021-sec-b"
   },
-  "keywords": [
+  "keywords": 
+  [
     "apwt"
   ],
   "bugs": {
